--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Sync
 main: me.staylords.sync.SyncPlugin
-version: '${git.commit.id.abbrev}/${git.branch}'
+version: '(#${git.commit.id.abbrev}/${git.branch})'
 author: staylords
 depend:
   - DiscordSRV
