complete project, /cf command only needs to be perfected

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,8 @@ version: ${project.version}-${git.commit.id.abbrev}/${git.branch}
 author: staylords
 depend:
   - DiscordSRV
+  - DeluxeCoinflip
+  - Tokens
+  - EconomyAPI
+  - TokenManager
+  - TAB
