--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,8 @@
-name: Sync
+name: ArcherDiscordLink
 main: me.staylords.sync.SyncPlugin
 version: ${project.version}-${git.commit.id.abbrev}/${git.branch}
-author: staylords
+description: ${git.remote.origin.url}
+author: ${git.build.user.name}
 depend:
   - DiscordSRV
   - DeluxeCoinflip
